--- a/Witcher-Days-and-Night/index.html
+++ b/Witcher-Days-and-Night/index.html
@@ -6,6 +6,7 @@
     <!-- <title>The Witcher: Day and Night</title> -->
     <title>The Witcher | Day and Night</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/icon.jpg">
 
 </head>
 <body>
