--- a/Witcher-Days-and-Night/index.html
+++ b/Witcher-Days-and-Night/index.html
@@ -6,7 +6,7 @@
     <!-- <title>The Witcher: Days and Nights</title> -->
     <title>The Witcher | Days and Nights</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="img/icon.jpg">
+    <link rel="icon" href="img/icon.png">
 
 </head>
 <body>
