--- a/Witcher-Days-and-Night/index.html
+++ b/Witcher-Days-and-Night/index.html
@@ -21,7 +21,9 @@
         <img class="raven-1" id="raven-1" src="img/raven.png">
         <img class="raven-2" id="raven-2" src="img/raven.png">
         <img class="raven-3" id="raven-3" src="img/raven.png">
-        <img class="hidden-ewok" id="bear" src="img/ewok.png">
+        <a href="https://starwars.fandom.com/ru/wiki/%D0%AD%D0%B2%D0%BE%D0%BA%D0%B8">
+            <img class="hidden-ewok" id="bear" src="img/ewok.png">
+        </a>
     </div>
     <audio id="forestDay" src="audios/forest-sound.mp3"></audio>
     <audio id="forestNight" src="audios/night-forest-sound.wav"></audio>
